# pallet_money_pot

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/money-pot/: Cargo.toml  README.md
pallets/money-pot/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
